--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!Doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE">
+        <meta name="viewport" content="width=device-width, initial-scale">
+        <link rel="stylesheet" href="styles.css">
+        <title>Home</title>
+    </head>
+    <body>
+        <h1>Hola Mundo</h1>
+    </body>
+</html>
