Añadida la cabecera

--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE">
         <meta name="viewport" content="width=device-width, initial-scale">
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;500&display=swap" rel="stylesheet">
         <title>Home</title>
     </head>
     <body>
-        <h1>Hola Mundo</h1>
+        <header id="main-header">
+            <a id="logo-header" href="index.html">
+                <span id="titulo">Angel Castillo</span>
+                <span id="description">Desarrollo Web/Apps Móviles/Escritorio</span>
+            </a>
+            <nav>
+                <ul id="cabecera-menu">
+                    <li><a>Inicio</a></li>
+                    <li><a>Experiencia</a></li>
+                    <li><a>Sobre mi</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
