Agegado el prototipo del formulario de contacto para hacer CRUD

--- a/index.html
+++ b/index.html
@@ -24,5 +24,19 @@
                 </ul>
             </nav>
         </header>
+        <h1 class="formularioTitulo">Contáctenos<h1>
+        <form action="" class="formulario">
+            <input type="text" class="formularioInput">
+            <label for="" class="formularioLabel">Nombre</label>
+            <input type="text" class="formularioInput">
+            <label for="" class="formularioLabel">Apellido</label>
+            <input type="number" class="formularioInput">
+            <label for="" class="formularioLabel">Número Telefónico</label>
+            <input type="email" class="formularioInput">
+            <label for="" class="formularioLabel">Correo Electrónico</label>
+            <form action="" class="formulario">
+            <input type="text" class="formularioInput">
+            <label for="" class="formularioLabel">Mensaje</label>
+        </form>
     </body>
 </html>
