Agregados algunos estilos para el formulario de contacto.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE">
         <meta name="viewport" content="width=device-width, initial-scale">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="res/forms.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;500&display=swap" rel="stylesheet">
@@ -24,19 +25,19 @@
                 </ul>
             </nav>
         </header>
-        <h1 class="formularioTitulo">Contáctenos<h1>
         <form action="" class="formulario">
-            <input type="text" class="formularioInput">
+            <h1 class="formularioTitulo">Contáctenos<h1>
             <label for="" class="formularioLabel">Nombre</label>
             <input type="text" class="formularioInput">
             <label for="" class="formularioLabel">Apellido</label>
-            <input type="number" class="formularioInput">
-            <label for="" class="formularioLabel">Número Telefónico</label>
-            <input type="email" class="formularioInput">
-            <label for="" class="formularioLabel">Correo Electrónico</label>
-            <form action="" class="formulario">
             <input type="text" class="formularioInput">
+            <label for="" class="formularioLabel">Número Telefónico</label>
+            <input type="number" class="formularioInput">
+            <label for="" class="formularioLabel">Correo Electrónico</label>
+            <input type="email" class="formularioInput">
             <label for="" class="formularioLabel">Mensaje</label>
+            <input type="text" class="formularioInput">
+            <input type="submit" class="formularioSubmit"></input>
         </form>
     </body>
 </html>
