Terminado el diseño del formulario

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         </header>
         <form action="" class="formulario">
             <h1 class="formularioTitulo">Contáctenos<h1>
-            <label for="" class="formularioLabel">Nombre</label>
-            <input type="text" class="formularioInput">
-            <label for="" class="formularioLabel">Apellido</label>
-            <input type="text" class="formularioInput">
-            <label for="" class="formularioLabel">Número Telefónico</label>
-            <input type="number" class="formularioInput">
-            <label for="" class="formularioLabel">Correo Electrónico</label>
-            <input type="email" class="formularioInput">
-            <label for="" class="formularioLabel">Mensaje</label>
+            <label for="" class="formularioLabel">Nombre:</label>
+            <input type="text" class="formularioInput" placeholder="Angel">
+            <label for="" class="formularioLabel">Apellido:</label>
+            <input type="text" class="formularioInput" placeholder="Castillo">
+            <label for="" class="formularioLabel">Número Telefónico:</label>
+            <input type="number" class="formularioInput" placeholder="+520365415671">
+            <label for="" class="formularioLabel">Correo Electrónico:</label>
+            <input type="email" class="formularioInput" placeholder="angel@example.com">
+            <label for="" class="formularioLabel">Mensaje:</label>
             <input type="text" class="formularioInput">
             <input type="submit" class="formularioSubmit"></input>
         </form>
